src/test/testData/parser/good/ExpressionAnonymousListMatrix.basic
{1,2,L1(3),4*B-Ans(2)
[[1,2,3],[4,5,6],[7,8,9]