src/test/testData/parser/bad/StatementExpr.basic
2->A
2->[A](1,2)
2->L1(3
{2->L1
{2->ABC
3->|LA
"A->{Y1}
"A->Str0
[[1->[B]
2->Ymin
3->dim(L1
3->dim([A])
3->dim(|LABC